2005-01-30  Todd Berman  <tberman@off.net>

	* CodeCompletion/CompletionListWindow.cs: Small changes, make sure the
	placement of the declaration view window is redone when the list size
	is changed. Fixes bug #71974

2005-01-29  Todd Berman  <tberman@off.net>

	* Gui/SourceEditorView.cs: Only show "Breakpoint" if the
	DebuggingService is available.

2005-01-27  John Luke  <john.luke@gmail.com>

	* EditorBindings.glade:
	* texteditoraddin.glade: update to new glade format

	* EditorBindings.glade:
	* texteditoraddin.glade:
	* CodeCompletion/ListWindow.cs:
	* Gui/SourceEditorBuffer.cs:
	* Gui/SourceEditorDisplayBinding.cs
	* Gui/SourceEditorWidget.cs:
	* Gui/SourceEditorView.cs:
	* Gui/Dialogs/ReplaceDialog.cs:
	* Gui/Dialogs/ReplaceInFilesDialog.cs:
	* Gui/OptionPanels/CodeTemplatePanel.cs:
	* Gui/OptionPanels/GeneralTextEditorPanel.cs:
	* InsightWindow/InsightWindow.cs:
	* Search/DocumentIterator/DirectoryDocumentIterator.cs:
	use ComboBox instead of OptionMenus
	use Gtk.Entry w/completion instead of Gnome.Entry
	remove obselete warnings, etc.

	* Makefile.am: remove Html from build
	* Commands/ProjectCommands.cs: comment out that
	* Gui/Dialogs/ExportProjectToHtmlDialog.cs: kill this

2005-01-26  Christian Hergert <chris@mosaix.net>
	* Gui/SourceEditorView.cs: Fix for new ShowView method in
	DefaultWorkbench.

2005-01-26  John Luke  <john.luke@gmail.com>

	* Makefile.am:
	* Gui/SourceEditorDisplayBinding.cs: use Gnome.Vfs

2005-01-26  Todd Berman  <tberman@off.net>

	* CodeCompletion/CompletionListWindow.cs:
	* CodeCompletion/CodeCompletionData.cs:
	* CodeCompletion/ListWindow.cs:
	* CodeCompletion/DeclarationViewWindow.cs: A bit of a nicer overload
	dialog.

2005-01-26  Alexandre Gomes  <alexmipego@gmail.com>

	* CodeCompletion/CompletationListWindow.cs: Fixed completion
	window when near screen edges.

2005-01-26  Alexandre Gomes  <alexmipego@gmail.com>

	* CodeCompletion/CompletationListWindow.cs:
	* CodeCompletion/ListWindow.cs: Closes bug #71686. Also makes