@@ -1,3 +1,9 @@
+2005-01-30  John Luke <john.luke@gmail.com>
+
+	* Gui/SourceEditorView.cs: only show completion if the
+	next char is not whitespace, ctl+space will override this
+	fixes bug# 60113
+
 2005-01-30  Todd Berman  <tberman@off.net>
 
 	* CodeCompletion/CompletionListWindow.cs: Small changes, make sure the
